otp alignment fix

--- a/frontend/src/components/login/style.scss
+++ b/frontend/src/components/login/style.scss
@@ -157,7 +157,7 @@ background-color: $white;
         border-bottom: 1px solid #D6D6D6;
         border-radius: 0;
         font-size: 20px;
-        padding-left: 2rem;
+        padding-left: 1rem;
         outline: none;
         
     .custom-dropdown .btn-custom-dropdown {
